--- a/styles/manabuStyles.css
+++ b/styles/manabuStyles.css
@@ -47,6 +47,8 @@ h1, h5 {
 	clear: both;
 	position: relative;
 	bottom: 0;
+	display: block;
+	z-index: -100;
 }
 
 #masterContainer {
